--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/InFlog/inflog-backEnd.git"
   },
-  "author": "nargess-jessica-david",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/InFlog/inflog-backEnd/issues"
@@ -21,7 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.11",
+    "mongoose": "^5.11.13",
     "nodemon": "^2.0.7"
   }
 }
